SUBDIRS = pqxx

nobase_include_HEADERS= pqxx/pqxx \
	pqxx/basic_connection pqxx/basic_connection.hxx \
	pqxx/binarystring pqxx/binarystring.hxx \
	pqxx/cachedresult.h \
	pqxx/compiler-public.hxx \
	pqxx/compiler-internal-pre.hxx pqxx/compiler-internal-post.hxx \
	pqxx/connection pqxx/connection.hxx \
	pqxx/connection_base pqxx/connection_base.hxx \
	pqxx/connectionpolicy pqxx/connectionpolicy.hxx \
	pqxx/cursor pqxx/cursor.hxx pqxx/cursor.h \
	pqxx/dbtransaction pqxx/dbtransaction.hxx \
	pqxx/except pqxx/except.hxx \
	pqxx/isolation pqxx/isolation.hxx \
	pqxx/largeobject pqxx/largeobject.hxx \
	pqxx/libpq-forward.hxx \
	pqxx/nontransaction pqxx/nontransaction.hxx \
	pqxx/pipeline pqxx/pipeline.hxx \
	pqxx/prepared_statement pqxx/prepared_statement.hxx \
	pqxx/result pqxx/result.hxx \
	pqxx/robusttransaction pqxx/robusttransaction.hxx \
	pqxx/subtransaction pqxx/subtransaction.hxx \
	pqxx/tablereader pqxx/tablereader.hxx \
	pqxx/tablestream pqxx/tablestream.hxx \
	pqxx/tablewriter pqxx/tablewriter.hxx \
	pqxx/transaction pqxx/transaction.hxx \
	pqxx/transaction_base pqxx/transaction_base.hxx \
	pqxx/transactor pqxx/transactor.hxx \
	pqxx/trigger pqxx/trigger.hxx \
	pqxx/util pqxx/util.hxx

nobase_nodist_include_HEADERS = \
	pqxx/config-public-compiler.h

