SUBDIRS = pqxx

nobase_include_HEADERS= pqxx/pqxx \
	pqxx/array pqxx/array.hxx \
	pqxx/binarystring pqxx/binarystring.hxx \
	pqxx/compiler-public.hxx \
	pqxx/internal/compiler-internal-pre.hxx \
	pqxx/internal/compiler-internal-post.hxx \
	pqxx/connection pqxx/connection.hxx \
	pqxx/cursor pqxx/cursor.hxx \
	pqxx/dbtransaction pqxx/dbtransaction.hxx \
	pqxx/errorhandler pqxx/errorhandler.hxx \
	pqxx/except pqxx/except.hxx \
	pqxx/field pqxx/field.hxx \
	pqxx/isolation pqxx/isolation.hxx \
	pqxx/largeobject pqxx/largeobject.hxx \
	pqxx/nontransaction pqxx/nontransaction.hxx \
	pqxx/notification pqxx/notification.hxx \
	pqxx/pipeline pqxx/pipeline.hxx \
	pqxx/prepared_statement pqxx/prepared_statement.hxx \
	pqxx/result pqxx/result.hxx \
	pqxx/result_iterator.hxx \
	pqxx/robusttransaction pqxx/robusttransaction.hxx \
	pqxx/strconv pqxx/strconv.hxx \
	pqxx/stream_from pqxx/stream_from.hxx \
	pqxx/stream_to pqxx/stream_to.hxx \
	pqxx/subtransaction pqxx/subtransaction.hxx \
	pqxx/transaction pqxx/transaction.hxx \
	pqxx/transaction_base pqxx/transaction_base.hxx \
	pqxx/transactor pqxx/transactor.hxx \
	pqxx/row pqxx/row.hxx \
	pqxx/util pqxx/util.hxx \
	pqxx/types pqxx/types.hxx \
	pqxx/version pqxx/version.hxx \
	pqxx/internal/callgate.hxx \
	pqxx/internal/conversions.hxx \
	pqxx/internal/encoding_group.hxx \
	pqxx/internal/encodings.hxx \
	pqxx/internal/libpq-forward.hxx \
	pqxx/internal/sql_cursor.hxx \
	pqxx/internal/statement_parameters.hxx \
	pqxx/internal/gates/connection-errorhandler.hxx \
	pqxx/internal/gates/connection-largeobject.hxx \
	pqxx/internal/gates/connection-notification_receiver.hxx \
	pqxx/internal/gates/connection-pipeline.hxx \
	pqxx/internal/gates/connection-sql_cursor.hxx \
	pqxx/internal/gates/connection-transaction.hxx \
	pqxx/internal/gates/errorhandler-connection.hxx \
	pqxx/internal/gates/icursorstream-icursor_iterator.hxx \
	pqxx/internal/gates/icursor_iterator-icursorstream.hxx \
	pqxx/internal/gates/result-connection.hxx \
	pqxx/internal/gates/result-creation.hxx \
	pqxx/internal/gates/result-row.hxx \
	pqxx/internal/gates/result-sql_cursor.hxx \
	pqxx/internal/gates/transaction-sql_cursor.hxx \
	pqxx/internal/gates/transaction-stream_from.hxx \
	pqxx/internal/gates/transaction-stream_to.hxx \
	pqxx/internal/gates/transaction-transactionfocus.hxx \
	pqxx/internal/ignore-deprecated-pre.hxx \
	pqxx/internal/ignore-deprecated-post.hxx


nobase_nodist_include_HEADERS = \
	pqxx/config-public-compiler.h

EXTRA_DIST = \
	pqxx/doc/*.md \
	pqxx/doc/mainpage.md.template \
	pqxx/version.hxx.template
