SUBDIRS = config doc include src test

MAINTAINERCLEANFILES=Makefile.in aclocal.m4 config.h.in config.log configure \
	stamp-h.in

includedir=$(prefix)/include/pqxx
#include_HEADERS=include/pqxx/compiler.h \
#	include/pqxx/config.h \
#	include/pqxx/connection.h \
#	include/pqxx/cursor.h \
#	include/pqxx/nontransaction.h \
#	include/pqxx/result.h \
#	include/pqxx/robusttransaction.h \
#	include/pqxx/tablereader.h \
#	include/pqxx/tablestream.h \
#	include/pqxx/tablewriter.h \
#	include/pqxx/transaction.h \
#	include/pqxx/transactionitf.h \
#	include/pqxx/transactor.h \
#	include/pqxx/trigger.h \
#	include/pqxx/util.h

